Fix display on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -328,6 +328,7 @@ li.bypostauthor cite span {
 .comment-content img,
 .widget img {
 	max-width: 100%; /* Fluid images for posts, comments, and widgets */
+	height: auto;
 }
 img[class*="align"],
 img[class*="wp-image-"],
@@ -344,6 +345,7 @@ img.wp-post-image {
 
 .post img {
 	margin: 0 auto;
+	height: auto;
 }
 
 /* Make sure videos and embeds fit their containers */
@@ -632,7 +634,91 @@ a:hover {
 .menu-toggle {
 	display: inline-block;
 }
-
+.main-navigation {
+	border-bottom: 3px dotted #444;
+	padding: 5px 0;
+}
+.main-navigation ul.nav-menu,
+.main-navigation div.nav-menu > ul {
+	display: inline-block !important;
+	text-align: left;
+}
+.main-navigation div.nav-menu {
+	width: 100%;
+	float: left;
+}
+.main-navigation ul {
+	margin: 0;
+	text-indent: 0;
+}
+.main-navigation li a,
+.main-navigation li {
+	display: inline-block;
+	text-decoration: none;
+}
+.main-navigation li a {
+	border-bottom: 0;
+	color: #6a6a6a;
+	line-height: 3.3;
+	text-transform: uppercase;
+	white-space: nowrap;
+	font-size: 11px;
+	font-size: 0.77922rem;
+}
+.main-navigation li a:hover {
+	color: #000;
+}
+.main-navigation li {
+	margin: 0 10px 0 0;
+	margin: 0 0.7rem 0 0;
+	position: relative;
+}
+.main-navigation li ul {
+	display: none;
+	margin: 0;
+	padding: 0;
+	position: absolute;
+	top: 100%;
+	z-index: 1;
+}
+.main-navigation li ul ul {
+	top: 0;
+	left: 100%;
+}
+.main-navigation ul li:hover > ul {
+	border-left: 0;
+	display: block;
+}
+.main-navigation li ul li a {
+	background: #efefef;
+	border-bottom: 1px solid #ededed;
+	display: block;
+	font-size: 11px;
+	font-size: 0.785714286rem;
+	line-height: 2.181818182;
+	padding: 8px 10px;
+	padding: 0.571428571rem 0.714285714rem;
+	width: 180px;
+	width: 12.85714286rem;
+	white-space: normal;
+}
+.main-navigation li ul li a:hover {
+	background: #e3e3e3;
+	color: #444;
+}
+.main-navigation .current-menu-item > a,
+.main-navigation .current-menu-ancestor > a,
+.main-navigation .current_page_item > a,
+.main-navigation .current_page_ancestor > a {
+	color: #636363;
+	font-weight: bold;
+}
+.main-navigation .current_page_item a {
+	border-bottom: 2px solid #000;
+}
+.main-navigation li:hover a {
+	border-bottom: 2px solid #888;
+}
 #social-links {
 	text-align: center;
 	margin: 5px 0 15px 0;
@@ -1714,92 +1800,20 @@ img#wpstats {
 		line-height: 1.846153846;
 		margin-bottom: 0;
 	}
-	.main-navigation {
-		border-bottom: 3px dotted #444;
-		padding: 5px 0;
-	}
-	.main-navigation ul.nav-menu,
-	.main-navigation div.nav-menu > ul {
-		display: inline-block !important;
-		text-align: left;
-	}
-	.main-navigation div.nav-menu {
-		width: 100%;
-		float: left;
-	}
-	.main-navigation ul {
-		margin: 0;
-		text-indent: 0;
-	}
-	.main-navigation li a,
-	.main-navigation li {
-		display: inline-block;
-		text-decoration: none;
-	}
-	.main-navigation li a {
-		border-bottom: 0;
-		color: #6a6a6a;
-		line-height: 3.3;
-		text-transform: uppercase;
-		white-space: nowrap;
-		font-size: 12px;
-		font-size: 0.857142857rem;
-	}
-	.main-navigation li a:hover {
-		color: #000;
-	}
 	.main-navigation li {
 		margin: 0 40px 0 0;
 		margin: 0 2.857142857rem 0 0;
 		position: relative;
 	}
-	.main-navigation li ul {
-		display: none;
-		margin: 0;
-		padding: 0;
-		position: absolute;
-		top: 100%;
-		z-index: 1;
+	.main-navigation li a {
+		font-size: 12px;
+		font-size: 0.857142857rem;
 	}
-	.main-navigation li ul ul {
-		top: 0;
-		left: 100%;
+	.menu-toggle {	.main-navigation li {
+		margin: 0 40px 0 0;
+		margin: 0 2.857142857rem 0 0;
+		position: relative;
 	}
-	.main-navigation ul li:hover > ul {
-		border-left: 0;
-		display: block;
-	}
-	.main-navigation li ul li a {
-		background: #efefef;
-		border-bottom: 1px solid #ededed;
-		display: block;
-		font-size: 11px;
-		font-size: 0.785714286rem;
-		line-height: 2.181818182;
-		padding: 8px 10px;
-		padding: 0.571428571rem 0.714285714rem;
-		width: 180px;
-		width: 12.85714286rem;
-		white-space: normal;
-	}
-	.main-navigation li ul li a:hover {
-		background: #e3e3e3;
-		color: #444;
-	}
-	.main-navigation .current-menu-item > a,
-	.main-navigation .current-menu-ancestor > a,
-	.main-navigation .current_page_item > a,
-	.main-navigation .current_page_ancestor > a {
-		color: #636363;
-		font-weight: bold;
-	}
-	.main-navigation .current_page_item a {
-		border-bottom: 2px solid #000;
-	}
-	.main-navigation li:hover a {
-		border-bottom: 2px solid #888;
-	}
-	.menu-toggle {
 		display: none;
 	}
 	.entry-header .entry-title,
